Fix spacing issues in css file

--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,37 @@
-html{
+html {
   background-color: #f2f1ed;
   font-family: Georgia, serif;
 }
-img{
+
+img {
   width: 100%;
 }
-h2{
+
+h2 {
   color: #5d8432;
   text-transform: uppercase;
-  font-family: 'Patua One', cursive;
+  font-family: "Patua One", cursive;
   font-size: 3rem;
 }
-p{
+
+p {
   text-align: center;
   font-style: italic;
   font-size: 1rem;
 }
-.intro{
+
+.intro {
   font-size: 2rem;
 }
-a{
+
+a {
   color: #793284;
   text-decoration: none;
   list-style-type: none;
-  font-family: 'Patua One', cursive;
+  font-family: "Patua One", cursive;
   font-size: 2rem;
 }
-a:hover{
+
+a:hover {
   color: #b42885;
 }
